--- a/jpa-persistence/pom.xml
+++ b/jpa-persistence/pom.xml
@@ -8,16 +8,28 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>console-in-memory</artifactId>
+
+    <artifactId>jpa-persistence</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>eu.bambz.hexagonal</groupId>
-            <artifactId>domain</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>eu.bambz.hexagonal</groupId>
-            <artifactId>in-memory-persistence</artifactId>
+            <artifactId>domain</artifactId>
         </dependency>
     </dependencies>
 </project>
