--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.4.1</version>
+    </parent>
+
     <groupId>eu.bambz.hexagonal</groupId>
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
@@ -11,6 +17,9 @@
     <modules>
         <module>domain</module>
         <module>console-in-memory</module>
+        <module>in-memory-persistence</module>
+        <module>jpa-persistence</module>
+        <module>spring-rest</module>
     </modules>
 
     <dependencyManagement>
@@ -18,6 +27,16 @@
             <dependency>
                 <groupId>eu.bambz.hexagonal</groupId>
                 <artifactId>domain</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.bambz.hexagonal</groupId>
+                <artifactId>in-memory-persistence</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.bambz.hexagonal</groupId>
+                <artifactId>jpa-persistence</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
@@ -29,6 +48,14 @@
             <artifactId>vavr</artifactId>
             <version>0.10.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
