--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>in-memory-persistence</module>
         <module>jpa-persistence</module>
         <module>spring-rest</module>
+        <module>spring-rest-api</module>
+        <module>spring-rest-client</module>
     </modules>
 
     <dependencyManagement>
@@ -37,6 +39,11 @@
             <dependency>
                 <groupId>eu.bambz.hexagonal</groupId>
                 <artifactId>jpa-persistence</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.bambz.hexagonal</groupId>
+                <artifactId>spring-rest-api</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
         </dependencies>
@@ -64,8 +71,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>11</source>
                 </configuration>
             </plugin>
         </plugins>
