--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
                 <artifactId>spring-rest-api</artifactId>
                 <version>1.0-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>eu.bambz.hexagonal</groupId>
+                <artifactId>spring-rest-client</artifactId>
+                <version>1.0-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
